Resolved issue with non-converging Pachinko mortality loop. Other clean-up to get code ready for respository.

--- a/app.config
+++ b/app.config
@@ -14,19 +14,11 @@
             </setting>
         </concep.Properties.GlobalSettings>
         <concep.Properties.Settings>
-            <setting name="concepMainFormText" serializeAs="String">
-                <value>CONCEP V 3.5 - Series 13 (07/2012  Build)</value>
-            </setting>
             <setting name="assignLuduHsTypeYear" serializeAs="String">
                 <value>2010</value>
             </setting>
             <setting name="spRunAssignLuduHsType" serializeAs="String">
                 <value>EXECUTE sp_assign_ludu_hs_type @estimates_year</value>
-            </setting>
-            <setting name="controlGqMainButtonText" serializeAs="String">
-                <value>Allocate 2010 Census (SR13)
-
-</value>
             </setting>
             <setting name="controlVitalsMainButtonText" serializeAs="String">
                 <value>Income Calibration</value>
@@ -34,14 +26,17 @@
             <setting name="controlVitalsRunButtonText" serializeAs="String">
                 <value>Run</value>
             </setting>
+            <setting name="concepMainFormText" serializeAs="String">
+                <value>CONCEP V 4 - Series 13 (03/2013  Build)</value>
+            </setting>
             <setting name="estimatesYearComboItems" serializeAs="String">
                 <value>2011,2012,2013,2014,2015</value>
             </setting>
             <setting name="estIncPriceIndex" serializeAs="String">
-                <value></value>
+                <value />
             </setting>
-            <setting name="concepSqlConnectionString" serializeAs="String">
-                <value>Data Source=PILA\SDGINTDB;Initial Catalog=concep_test;User ID=concep_app;Password=c0nc3p_@pp</value>
+            <setting name="controlGqMainButtonText" serializeAs="String">
+                <value>Allocate 2010 Census (SR13)</value>
             </setting>
         </concep.Properties.Settings>
     </applicationSettings>
