--- a/concep.exe.config
+++ b/concep.exe.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  
   <appSettings>
-
     <!-- ControlGQ settings -->
 
     <!-- Global Constants-->
@@ -14,7 +14,7 @@
     <add key ="MAX_CONTROL_CTS" value ="52"/>    <!-- max number of CTS to be controlled in detailed pop allocation -->
     <add key ="MAX_CTS_IN_SRA" value="41"/>    
     <add key ="MAX_ELEM" value ="716"/>    <!-- don't remember why this is so high - used in pasee-->
-    <add key ="MAXGQRECORDS" value="810"/>    <!--max number of lckey records by city in GQ lckey file -->
+    <add key ="MAXGQRECORDS" value="1186"/>    <!--max number of lckey records by city in GQ lckey file -->
     <add key ="MAX_LCKEYS_IN_CITYCTBG" value ="7349"/>    <!--maximum number of lckeys in any cityctbg grouping-->
     <add key ="MAX_LCKEYS_IN_CTBG" value ="4612"/>    <!--maximum number of lckeys in any ctbg -->
 
@@ -44,18 +44,18 @@
     <add key ="NUM_SPLIT_TRACTS" value = "775"/>    <!-- number of split tracts (city, ct) -->
     <add key ="NUM_SRA" value="41"/>
     <add key ="NUM_SUPERSPLITS" value ="755"/>    <!-- number of super splits (combined split tracts) -->
-    <add key ="NUM_ZIP" value ="112"/>
+    <add key ="NUM_ZIP" value ="113"/>
     <add key ="V_HS_RATE" value = "25"/>
     <add key ="V_POP_RATE" value = "25"/>
 
     <!-- I/O Tables -->
-    <add key ="age5Lookup" value ="dbo.age_age5_lookup"/>
-    <add key ="basePopCT" value="dbo.detailed_pop_ct"/>
-    <add key ="basePopMGRA" value="dbo.detailed_pop_tab_mgra"/>
-    <add key ="baseYearIncome" value ="dbo.income_2010"/>
-    <add key ="birthsCT" value="dbo.births_ct"/>
-    <add key ="birthsMGRA" value="dbo.births_mgra"/>
-    <add key ="birthsZIP" value="dbo.births_zip"/>
+    <add key ="age5Lookup" value ="age_age5_lookup"/>
+    <add key ="basePopCT" value="detailed_pop_ct"/>
+    <add key ="basePopMGRA" value="detailed_pop_tab_mgra"/>
+    <add key ="baseYearIncome" value ="income_2010"/>
+    <add key ="birthsCT" value="births_ct"/>
+    <add key ="birthsMGRA" value="births_mgra"/>
+    <add key ="birthsZIP" value="births_zip"/>
     <add key ="census_detailed_pop_tab_ct" value ="census.dbo.census_detailed_pop_tab_ct"/>
     <add key ="census_detailed_pop_control_ct" value ="census.dbo.census_2010_detailed_pop_control_ct"/>
     <add key ="census_gq_ctbg" value ="census.dbo.census_gq_ctbg"/>
@@ -69,45 +69,48 @@
     <add key ="census_2010_supersplit" value="census.dbo.census_2010_supersplit"/>
     <add key ="census_2010_partialsupersplit" value="census.dbo.census_2010_partialsupersplit"/>
     <add key ="ctblock_mgra_manyto1" value="census.dbo.xref_ct10block_mgra_manyto1"/>
-    <add key ="ct10Kids" value ="dbo.census2010_ct_kids_hh"/>
-    <add key ="deathsCT" value="dbo.deaths_ct"/>
-    <add key ="detailedPopTabCT" value ="dbo.detailed_pop_tab_ct"/>
-    <add key ="distributionHHWorkersRegion" value ="dbo.distribution_popest_HH_by_workers_region"/>
-    <add key ="distributionHHWOC" value ="dbo.distribution_popest_HH_wo_children_ct"/>
-    <add key ="errorFactorsHHSCT" value ="dbo.error_factors_popest_HHS_ct"/>
+    <add key ="ct10Kids" value ="census2010_ct_kids_hh"/>
+    <add key ="deathsCT" value="deaths_ct"/>
+    <add key ="detailedPopTabCT" value ="detailed_pop_tab_ct"/>
+    <add key ="distributionHHWorkersRegion" value ="distribution_popest_HHworkers_region"/>
+    <add key ="distributionHHWOC" value ="distribution_popest_HH_wo_children_ct"/>
+    <add key ="errorFactorsHHSCT" value ="error_factors_popest_HHS_ct"/>
     <add key ="gq_lu_priority" value ="census.dbo.gq_lu_priority"/>
-    <add key ="GQControlled" value="dbo.gq_by_lckey_controlled"/>
-    <add key ="GQRaw" value ="dbo.gq_by_lckey_raw"/>
-    <add key ="incomeAdj" value="dbo.adjustments_income_model"/>
-    <add key ="incomeCalibrationParms" value ="dbo.calibration_parameters_income_model"/>
-    <add key ="incomeEstimates" value ="dbo.income_estimates"/>
-    <add key ="incomeEstimatesMGRA" value ="dbo.income_estimates_mgra"/>
-    <add key ="incomeParms" value ="dbo.operational_parameters_income_model"/>
-    <add key ="landcoreHS" value ="dbo.HS_from_landcore"/>    
-    <add key ="migrationDistribution" value ="dbo.migration_distribution"/>
-    <add key ="migrationRates" value ="dbo.migration_rates"/>
-    <add key ="mil_dep_pct" value="dbo.pop_mil_dep_pct"/>
-    <add key ="mil_pct" value ="dbo.pop_mil_pct"/>
-    <add key ="overridesHHSDetail" value ="dbo.overrides_popest_HHSdetail"/>
-    <add key ="paseeUpdateCT" value ="dbo.pasee_update_ct"/>
+    <add key ="GQControlled" value="gq_by_lckey_controlled"/>
+    <add key ="GQRaw" value ="gq_by_lckey_raw"/>
+    <add key ="HSFromlandcore" value ="HS_from_landcore"/>
+    <add key ="incomeAdj" value="adjustments_income_model"/>
+    <add key ="incomeCalibrationParms" value ="calibration_parameters_income_model"/>
+    <add key ="incomeEstimates" value ="income_estimates"/>
+    <add key ="incomeEstimatesMGRA" value ="income_estimates_mgra"/>
+    <add key ="incomeParms" value ="operational_parameters_income_model"/>
+    <add key ="spPopulateCTTab" value ="sp_populate_ct_tab_table"/>
+    <add key ="spPaseeUpdate0" value="sp_add_detailed_pop_total"/>
+    
+    <add key ="migrationDistribution" value ="migration_distribution"/>
+    <add key ="migrationRates" value ="migration_rates"/>
+    <add key ="mil_dep_pct" value="pop_mil_dep_pct"/>
+    <add key ="mil_pct" value ="pop_mil_pct"/>
+    <add key ="overridesHHSDetail" value ="overrides_popest_HHSdetail"/>
+    <add key ="paseeUpdateCT" value ="pasee_update_ct"/>
     <add key ="popEstimatesCT" value ="detailed_pop_ct"/>
     <add key ="popEstimatesTabCT" value ="detailed_pop_tab_ct"/>
     <add key ="popEstimatesTabMGRA" value ="detailed_pop_tab_mgra"/>
-    <add key ="popestControls" value ="dbo.controls_popest_city"/>
-    <add key ="popestControlsHHRegion" value ="dbo.controls_popest_HH_region"/>
-    <add key ="popestHHDetailMGRA" value ="dbo.popest_HHdetail_mgra"/>
-    <add key ="popestHHDetailTabCT" value ="dbo.popest_HHdetail_tab_ct"/>
-    <add key ="popestHHSOvr" value="dbo.overrides_popest_HHS_mgra"/>
-    <add key ="popestMGRA" value="dbo.popest_mgra"/>
-    <add key ="popestUpdate" value ="dbo.popest_update"/>
-    <add key ="popestVacOvr" value="dbo.overrides_popest_vacancy_mgra"/>
-    <add key ="specialPopTracts" value ="dbo.pasee_special_pop_tracts"/>
+    <add key ="popestControls" value ="controls_popest_city"/>
+    <add key ="popestControlsHHRegion" value ="controls_popest_HH_region"/>
+    <add key ="popestHHDetailMGRA" value ="popest_HHdetail_mgra"/>
+    <add key ="popestHHDetailTabCT" value ="popest_HHdetail_ct"/>
+    <add key ="popestHHSOvr" value="overrides_popest_HHS_mgra"/>
+    <add key ="popestMGRA" value="popest_mgra"/>
+    <add key ="popestUpdate" value ="popest_update"/>
+    <add key ="popestVacOvr" value="overrides_popest_vacancy_mgra"/>
+    <add key ="specialPopTracts" value ="pasee_special_pop_tracts"/>
     <add key ="startingGQ" value ="census.dbo.starting_gq"/>
-    <add key ="survivalRates" value="dbo.survival_rates"/>
-    <add key ="survivalRatesROC" value="dbo.survival_rates_roc"/>
-    <add key ="vitalsControl" value="dbo.controls_births_deaths"/>
-    <add key ="wilma" value ="dbo.wilma"/>
-    <add key ="xref" value="dbo.xref_mgra_sr13"/>
+    <add key ="survivalRates" value="survival_rates"/>
+    <add key ="survivalRatesROC" value="survival_rates_roc"/>
+    <add key ="vitalsControl" value="controls_births_deaths"/>
+    <add key ="wilma" value ="wilma"/>
+    <add key ="xref" value="xref_mgra_sr13"/>
 
     <!-- ascii output files -->
     <add key ="networkPath" value ="\\hana\home\shared\res\estimates &amp; forecast\concep\temp\"/>
@@ -162,7 +165,7 @@
     <add key ="selectControlVitals5" value ="SELECT mgra, ethnicity, popf_18to19+popf_20to24+popf_25to29+popf_30to34+popf_35to39 FROM {0} WHERE estimates_year = {1} and ethnicity &gt; 0"/>
     <add key ="selectControlVitals6" value ="SELECT ct10, ethnicity, sex, age, pop FROM {0} WHERE estimates_year = {1}"/>
     <add key ="selectControlVitals7" value ="SELECT ethnicity, sex, age, SUM(pop) from {0} where estimates_year = {1} and pop &gt; 0 GROUP BY ethnicity, sex, age ORDER BY ethnicity, sex, age"/>
-    <add key ="selectControlVitals8" value="SELECT eth, dcm, dcf FROM {0} WHERE estimates_year = {1}"/>
+    <add key ="selectControlVitals8" value="SELECT eth, dcm, dcf FROM {0} WHERE birth_death_year = {1}"/>
 
     <!-- IncomeCalib Queries-->
     <add key="deleteIncomeCalib1" value ="delete from {0} where geo_type = {1}"/>
@@ -280,9 +283,6 @@
     <add key ="selectCountWhere" value ="select count(*) from {0} where estimates_year = {1}"/>
 
   </appSettings>
-  <connectionStrings>
-
-    <add name="ConcepDBConnectionString" connectionString="Data Source=pila.sandag.org\SdgIntDb;Persist Security Info=True;User ID=concep_app;Password=c0nc3p_@pp;Initial Catalog=concep_test" />
-    <add name ="CensusConnectionString" connectionString="Data Source=pila.sandag.org\SdgIntDb;Initial Catalog=census;Persist Security Info=True;User ID=concep_app;Password=c0nc3p_@pp"/>
+  <connectionStrings configSource="connections.config">
   </connectionStrings>
 </configuration>
