Remove reference to concep's own version of sr13 xref.

--- a/concep.exe.config
+++ b/concep.exe.config
@@ -110,7 +110,7 @@
     <add key ="survivalRatesROC" value="survival_rates_roc"/>
     <add key ="vitalsControl" value="controls_births_deaths"/>
     <add key ="wilma" value ="wilma"/>
-    <add key ="xref" value="xref_mgra_sr13"/>
+    <add key ="xref" value="vi_xref_geography_mgra_13"/>
 
     <!-- ascii output files -->
     <add key ="networkPath" value ="\\hana\home\shared\res\estimates &amp; forecast\concep\temp\"/>
@@ -145,8 +145,8 @@
 
     <!-- ControlGQ Queries-->
     <add key ="selectControlGQ1" value ="Select city, gq_civ_college,gq_civ_other from {0} where estimates_year = {1}"/>
-    <add key ="selectControlGQ2" value="Select x.city,lckey,lu,g.mgra,gq,gq_civ,gq_mil,gq_civ_college,gq_civ_other from {0} g, {1} x
-                                    where x.mgra = g.mgra and estimates_year = {2} order by x.city,gq desc"/>
+    <add key ="selectControlGQ2" value="Select x.jurisdiction_2010 as city,lckey,lu,g.mgra,gq,gq_civ,gq_mil,gq_civ_college,gq_civ_other from {0} g, {1} x
+                                    where x.mgra_13 = g.mgra and estimates_year = {2} order by x.jurisdiction_2010,gq desc"/>
     <!-- ControlVitals Queries-->
 
     <add key ="deleteControlVitals1" value="DELETE FROM {0} WHERE {1} = {2}"/>
