Update controlVital to use data_cafe xref.

--- a/concep.exe.config
+++ b/concep.exe.config
@@ -23,7 +23,7 @@
     <add key ="MAX_MGRAS_IN_CTS" value = "474"/>    <!-- max number of mgras in any zip -->
     <add key ="MAX_MGRAS_IN_SG" value ="166"/>    <!-- max number of mgras in any Supergroup -->
     <add key ="MAX_MGRAS_IN_SUPERSPLITS" value = "474"/>    <!--max number of MGRAs in any supersplit-->
-    <add key ="MAX_MGRAS_IN_ZIP" value = "694"/>    <!-- max number of mgras in any zip -->
+    <add key ="MAX_MGRAS_IN_ZIP" value = "697"/>    <!-- max number of mgras in any zip -->
     <add key ="MAX_POPEST_EXCEPTIONS" value = "25"/>
     <add key ="NUM_AGE" value = "101"/>    <!-- number of SYA age groups -->
     <add key ="NUM_AGE5" value ="20"/>    <!-- number of 5-year age groups-->
@@ -150,18 +150,18 @@
     <!-- ControlVitals Queries-->
 
     <add key ="deleteControlVitals1" value="DELETE FROM {0} WHERE {1} = {2}"/>
-    <add key ="insertControlVitals1" value ="insert into {0} select {3} ,x.ct10,ethnicity,sex,sum(births) from {1} x, {2} c where birth_year = 
-                                          {3} and x.mgra = c.mgra group by x.ct10,ethnicity,sex"/>
+    <add key ="insertControlVitals1" value ="insert into {0} select {3} ,x.tract_2010,ethnicity,sex,sum(births) from {1} x, {2} c where birth_year = 
+                                          {3} and x.mgra_13 = c.mgra group by x.tract_2010,ethnicity,sex"/>
 
     <add key ="selectControlVitals1" value ="SELECT b.ethnicity, b.sex, b.age, SUM(b.pop) AS sumPop, s.rate, r.roc FROM {0} s, {1} r, {2} b 
                                          where s.ethnicity = r.ethnicity AND s.ethnicity = b.ethnicity and s.sex = r.sex AND s.sex = b.sex and 
                                          s.age = r.age and s.age = b.age AND b.estimates_year = {3} GROUP BY b.ethnicity, b.sex, b.age, s.rate, r.roc ORDER BY b.ethnicity, b.sex, b.age"/>
 
-    <add key ="selectControlVitals2" value="select distinct zip from {0} order by zip"/>
+    <add key ="selectControlVitals2" value="select zip_2010 from {0} group by zip_2010 order by zip_2010"/>
     <add key ="selectControlVitals3" value="select zip, births, hm, nhwm, nhbm, nhim, nham, nhhm, nhom,nh2m, tm, hf, nhwf, nhbf, nhif, nhaf, nhhf, nhof, nh2f, tf from {0}
                                            where birth_year = {1} order by zip"/>
 
-    <add key ="selectControlVitals4" value="select distinct mgra,zip from {0} order by zip, mgra"/>
+    <add key ="selectControlVitals4" value="select mgra_13,zip_2010 from {0} group by zip_2010, mgra_13 order by zip_2010, mgra_13"/>
     <add key ="selectControlVitals5" value ="SELECT mgra, ethnicity, popf_18to19+popf_20to24+popf_25to29+popf_30to34+popf_35to39 FROM {0} WHERE estimates_year = {1} and ethnicity &gt; 0"/>
     <add key ="selectControlVitals6" value ="SELECT ct10, ethnicity, sex, age, pop FROM {0} WHERE estimates_year = {1}"/>
     <add key ="selectControlVitals7" value ="SELECT ethnicity, sex, age, SUM(pop) from {0} where estimates_year = {1} and pop &gt; 0 GROUP BY ethnicity, sex, age ORDER BY ethnicity, sex, age"/>
@@ -279,7 +279,7 @@
     <add key ="truncate" value ="truncate table {0}"/>
     <add key ="selectAll" value="select * from {0}"/>
     <add key ="selectAllWhere" value ="select * from {0} where estimates_year = {1}"/>
-    <add key ="selectCT" value ="SELECT DISTINCT ct10 FROM {0} order by ct10"/>
+    <add key ="selectCT" value ="SELECT tract_2010 FROM {0} group by tract_2010 order by tract_2010"/>
     <add key ="selectCountWhere" value ="select count(*) from {0} where estimates_year = {1}"/>
 
   </appSettings>
