Complete refinements on xref view references.

--- a/app.config
+++ b/app.config
@@ -27,7 +27,7 @@
                 <value>Run</value>
             </setting>
             <setting name="concepMainFormText" serializeAs="String">
-                <value>CONCEP V 4 - Series 13 (03/2013  Build)</value>
+                <value>CONCEP - Series 13 (10/29/2015 () Build)</value>
             </setting>
             <setting name="estimatesYearComboItems" serializeAs="String">
                 <value>2011,2012,2013,2014,2015</value>
