--- a/concep.exe.config
+++ b/concep.exe.config
@@ -12,7 +12,7 @@
     <add key ="MAX_CITIES" value = "20"/>    <!-- number of cities, 1 based (1-19)-->
 
     <add key ="MAX_CONTROL_CTS" value ="52"/>    <!-- max number of CTS to be controlled in detailed pop allocation -->
-    <add key ="MAX_CTS_IN_SRA" value="41"/>    
+    <add key ="MAX_CTS_IN_SRA" value="43"/>    
     <add key ="MAX_ELEM" value ="716"/>    <!-- don't remember why this is so high - used in pasee-->
     <add key ="MAXGQRECORDS" value="1186"/>    <!--max number of lckey records by city in GQ lckey file -->
     <add key ="MAX_LCKEYS_IN_CITYCTBG" value ="7349"/>    <!--maximum number of lckeys in any cityctbg grouping-->
@@ -111,6 +111,7 @@
     <add key ="vitalsControl" value="controls_births_deaths"/>
     <add key ="wilma" value ="wilma"/>
     <add key ="xref" value="vi_xref_geography_mgra_13"/>
+    <add key ="ct_2010_to_sra_1990" value="vi_tract_2010_to_sra_1990"/>
 
     <!-- ascii output files -->
     <add key ="networkPath" value ="\\hana\home\shared\res\estimates &amp; forecast\concep\temp\"/>
@@ -176,8 +177,8 @@
     <add key ="selectPOPEST1" value ="Select city,hs,hs_sf,hs_sfmu,hs_mf,hs_mh,hh,hh_sf,hh_sfmu,hh_mf,hh_mh,hhp,gq,gq_civ,gq_mil,gq_civ_college,
                                      gq_civ_other,vac_sf,vac_sfmu,vac_mf,vac_mh,hhs from {0} where estimates_year = {1} order by city"/>
 
-    <add key ="selectPOPEST2" value="select t.mgra, x.city, SUM(hs_sf), SUM(hs_sfmu), SUM(hs_mf), SUM(hs_mh) from {0} t, {1} x 
-                                     where t.estimates_year = {2} AND t.mgra = x.mgra GROUP BY t.mgra, x.city"/>
+    <add key ="selectPOPEST2" value="select t.mgra, x.jurisdiction_2010, SUM(hs_sf), SUM(hs_sfmu), SUM(hs_mf), SUM(hs_mh) from {0} t, {1} x 
+                                     where t.estimates_year = {2} AND t.mgra = x.mgra_13 GROUP BY t.mgra, x.jurisdiction_2010"/>
 
     <add key="selectPOPEST3" value ="select p.mgra, p.cityct10, p.city, p.ct10, p.hs, p.hs_sf, p.hs_sfmu, p.hs_mf, p.hs_mh, p.gq, p.gq_civ, 
                                     p.gq_mil, p.gq_civ_college, p.gq_civ_other,p.hhp, p.hh, p.hh_sf, p.hh_sfmu, p.hh_mf, p.hh_mh, po.hs,  
@@ -214,8 +215,8 @@
     <!-- ESTINC Queries -->
 
     <add key ="selectESTINC1" value="select sum(hh) from {0} where estimates_year = {1}"/>
-    <add key ="selectESTINC2" value ="select x.ct10,sum(hh) from {0} p, {1} x where p.estimates_year = {2} and x.mgra = p.mgra and x.sra = {3} group by x.ct10"/>
-    <add key ="selectESTINC3" value ="select x.sra,sum(hh) from {0} p, {1} x where p.estimates_year = {2} and x.mgra = p.mgra group by x.sra"/>
+    <add key ="selectESTINC2" value ="select x.tract_2010,sum(hh) from {0} p, {1} x where p.estimates_year = {2} and x.mgra_13 = p.mgra and x.sra_1990 = {3} group by x.tract_2010"/>
+    <add key ="selectESTINC3" value ="select x.sra_1990,sum(hh) from {0} p, {1} x where p.estimates_year = {2} and x.mgra_13 = p.mgra group by x.sra_1990"/>
     <add key ="selectESTINC4" value ="select * from {0} where estimates_year = {1} and geo_type = {2}"/>
     <add key ="selectESTINC5" value ="select * from {0} {1} "/>
     <add key ="selectESTINC6" value="select geo_type, id, i1, i2, i3, i4, i5, i6, i7, i8, i9, i10 from {0} where estimates_year = {1} {2}"/>
@@ -226,13 +227,13 @@
     <add key ="selectESTINC11" value="select parameter_type, parameter from {0} where estimates_year = {1} and geo_type = 4 and geo_id = 999"/>
     <add key ="selectESTINC12" value="select geo_id,parameter_type,parameter from {0} where estimates_year = {1} and geo_type = 2"/>
     <add key ="selectESTINC13" value ="select distinct ct10 from {0} where estimates_year = {1} order by ct10"/>
-    <add key ="selectESTINC14" value ="select x.ct10, p.mgra, p.hh from {0} p, {1} x where p.estimates_year = {2} and x.mgra = p.mgra order by p.mgra"/>
+    <add key ="selectESTINC14" value ="select x.tract_2010, p.mgra, p.hh from {0} p, {1} x where p.estimates_year = {2} and x.mgra_13 = p.mgra order by p.mgra"/>
 
     <!-- PASEE Queries -->
-    <add key ="selectPASEE1" value ="select distinct sra,ct10 from {0} order by ct10"/>
+    <add key ="selectPASEE1" value ="select distinct sra_1990,tract_2010 from {0} order by tract_2010"/>
     <add key ="selectPASEE2" value ="SELECT COUNT(*) FROM {0}"/>
     <add key ="selectPASEE3" value ="select sra,ct10,ethnicity,sex,age,pop from {0} where estimates_year = {1} and ethnicity &gt; 0 and pop &gt; 0"/>
-    <add key ="selectPASEE4" value ="select x.sra,x.ct10,sum(pop),sum(hhp),sum(gq_mil) from {0} p, {1} x where estimates_year = {2} and p.mgra = x.mgra group by x.sra,x.ct10"/>
+    <add key ="selectPASEE4" value ="select x.sra_1990,x.tract_2010,sum(pop),sum(hhp),sum(gq_mil) from {0} p, {1} x where estimates_year = {2} and p.mgra = x.mgra_13 group by x.sra_1990,x.tract_2010"/>
     <add key ="selectPASEE5" value ="select ct10,ethnicity,sex,age5,pop from {0} a, {1} a5 where estimates_year = {2} AND a.age = a5.age"/>
     <add key ="selectPASEE6" value ="select ct10,mgra,pop from {0} WHERE estimates_year = {1}"/>
     <add key ="selectPASEE7" value ="select ct10,ethnicity,sex,sum(births) from {0} where birth_year = {1} group by ct10,ethnicity,sex"/>
@@ -266,11 +267,11 @@
 
     <!-- PDHH Queries -->
     <add key ="selectPDHH1" value ="select sum(hh),sum(hhp) from {0} where estimates_year = {1}"/>
-    <add key ="selectPDHH2" value ="Select x.ct10,sum(hh),sum(hhp) from {0} m, {1} x where x.mgra = m.mgra and estimates_year = {2} group by x.ct10 order by x.ct10"/>
+    <add key ="selectPDHH2" value ="Select x.tract_2010,sum(hh),sum(hhp) from {0} m, {1} x where x.mgra_13 = m.mgra and estimates_year = {2} group by x.tract_2010 order by x.tract_2010"/>
     <add key ="selectPDHH3" value ="Select * from {0} where estimates_year = {1} order by ct10"/>
     <add key ="selectPDHH4" value ="select * from {0} order by ct10"/>
     <add key ="selectPDHH5" value ="Select ct10,pop_0to4+pop_5to9+pop_10to14+pop_15to17 from {0} where ethnicity = 0 and estimates_year = {1} order by ct10"/>
-    <add key ="selectPDHH6" value ="select x.mgra,hh,hhp,hhs from {0} p, {1} x where x.ct10 = {2} and x.mgra = p.mgra and p.estimates_year = {3}"/>
+    <add key ="selectPDHH6" value ="select x.mgra_13,hh,hhp,hhs from {0} p, {1} x where x.tract_2010 = {2} and x.mgra_13 = p.mgra and p.estimates_year = {3}"/>
 
     <!-- generic queries used by multiple modules-->
     <add key ="deleteFrom" value="delete from {0} where estimates_year = {1}"/>
