Fix connection string file reference.

--- a/concep.exe.config
+++ b/concep.exe.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  
+  <connectionStrings configSource="connections.config" />
   <appSettings>
     <!-- ControlGQ settings -->
 
@@ -284,6 +284,5 @@
     <add key ="selectCountWhere" value ="select count(*) from {0} where estimates_year = {1}"/>
 
   </appSettings>
-  <connectionStrings configSource="connections.config">
-  </connectionStrings>
+  
 </configuration>
